--- a/dapr/local/components/statestore-mysql.yaml
+++ b/dapr/local/components/statestore-mysql.yaml
@@ -1,7 +1,7 @@
 apiVersion: dapr.io/v1alpha1
 kind: Component
 metadata:
-  name: statestore
+  name: mysql-statestore
 spec:
   type: state.mysql
   version: v1
