Implement "get all items" with a binding component

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -73,7 +73,7 @@ services:
       [
           "./daprd",
           "-app-id",
-          "java_app",
+          "plop",
           "-app-port",
           "8080",
           "-dapr-http-port",
