--- a/java-app/pom.xml
+++ b/java-app/pom.xml
@@ -83,6 +83,16 @@
                 <!--                    </includes>-->
                 <!--                </configuration>-->
             </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>3.0.0-M5</version>
+                <configuration>
+                    <includes>
+                        <include>**/*Should.java</include>
+                    </includes>
+                </configuration>
+            </plugin>
         </plugins>
     </build>
 
