--- a/java-app/src/main/resources/application.properties
+++ b/java-app/src/main/resources/application.properties
@@ -1,3 +1,5 @@
 dapr.port=3500
 dapr.statestore.name=mysql-statestore
 dapr.binding.name=mysql-binding
+
+management.endpoints.web.exposure.include=*
