--- a/java-app/pom.xml
+++ b/java-app/pom.xml
@@ -13,9 +13,12 @@
     <version>0.0.1-SNAPSHOT</version>
     <name>java-app</name>
     <description>java-app</description>
+
     <properties>
         <java.version>17</java.version>
+        <micrometer.version>1.8.1</micrometer.version>
     </properties>
+
     <dependencies>
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -31,6 +34,17 @@
             <artifactId>lombok</artifactId>
             <optional>true</optional>
         </dependency>
+        <dependency>
+            <groupId>io.micrometer</groupId>
+            <artifactId>micrometer-registry-prometheus</artifactId>
+            <version>${micrometer.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>io.micrometer</groupId>
+            <artifactId>micrometer-core</artifactId>
+            <version>${micrometer.version}</version>
+        </dependency>
+
 
 
         <dependency>
